# stock-anomaly-detection

./: .coverage  .gitignore  CLAUDE.md  README.md
airflow-dags/: README.md
airflow-dags/dags/: __init__.py  spark_batch_pipeline_dag.py  spark_batch_pipeline_test_dag.py  template-spark-dag.py
docs/: Finance Anomaly Detection Platform – Plan V3.3 Final (Rule-Based + LLM).md  Finance_Anomaly_Detection_Platform_Plan_V3.3.md  Sub-Plan_User-Defined_Custom_Alert-Final_Complete_Plan.md  airflow-keycloak-authn-authz.md  alert-flow-architecture-review.md  alert-flow-current-state.md  checkpoint-07-05-2026.md  gold_layer_schema.dbml  gold_layer_schema.sql  gravitino-keycloak-oauth2-authentication-flow.md  innovation-complete.md  news-agent-impl-steps.md  note_airflow_config.md  remaining-spark-jobs.md  spark-streaming-apps.md
infra/k8s/: README.md
services/: README.md
services/alert-service/: .coverage  Dockerfile  README.md  pyproject.toml
services/finnhub-news-producer/: Dockerfile  README.md  pyproject.toml
services/finnhub-news-producer/src/finnhub_news_producer/: config.py  finnhub_client.py  main.py  metrics.py  normalizer.py  producer.py  schema.py
services/finnhub-trades-producer/: Dockerfile  README.md  pyproject.toml
services/finnhub-trades-producer/src/finnhub_trades_producer/: config.py  finnhub_client.py  main.py  metrics.py  normalizer.py  producer.py  schema.py
services/llm-agent/: .coverage  Dockerfile  README.md  pyproject.toml
services/llm-agent/src/llm_agent/: config.py  main.py  metrics.py  schema.py
services/llm-agent/src/llm_agent/graph/: build.py  nodes.py  state.py
services/llm-agent/src/llm_agent/infrastructure/: circuit_breaker.py  dedup_cache.py  news_reader.py  publisher.py  recheck_queue.py
services/llm-agent/src/llm_agent/llm/: base.py  factory.py  prompts.py
services/llm-agent/tests/: test_circuit_breaker.py  test_config.py  test_dedup_cache.py  test_graph.py  test_llm.py  test_llm_factory.py  test_news_reader.py  test_provider.py  test_publisher.py  test_recheck_queue.py  test_schema.py
services/rule-engine/: Dockerfile  README.md  pyproject.toml
services/rule-engine/src/rule_engine/: config.py  main.py  metrics.py
services/rule-engine/src/rule_engine/application/: rule_orchestrator.py  user_alert_processor.py
services/rule-engine/src/rule_engine/domain/: custom_rules.py  enums.py  models.py  rules.py  schema.py
services/rule-engine/src/rule_engine/infrastructure/: context_loader.py  telegram.py
services/rule-engine/src/rule_engine/infrastructure/db/: client.py  repository.py
services/rule-engine/tests/: test_custom_alert_publish.py  test_custom_rules.py  test_db_client.py  test_rule_orchestrator.py  test_rules.py  test_telegram_service.py  test_user_alert_processor.py
services/scripts/: build_and_push-alert-service.sh  build_and_push-finnhub-news-producer.sh  build_and_push-finnhub-producer.sh  build_and_push-llm-agent.sh  build_and_push-rule-engine.sh  run-alert-service.sh  (+15 more)
services/telegram-bot/: Dockerfile  README.md  pyproject.toml
services/telegram-bot/src/telegram_bot/: config.py  main.py
services/telegram-bot/src/telegram_bot/application/: alert_service.py  bot_runner.py  preference_service.py  watchlist_service.py
services/telegram-bot/src/telegram_bot/domain/: enums.py  models.py  ports.py  preferences.py  symbol.py
services/telegram-bot/src/telegram_bot/infrastructure/: alert_service_client.py  rule_engine_client.py
services/telegram-bot/src/telegram_bot/infrastructure/db/: client.py  preference_repository.py  repository.py  watchlist_repository.py
services/telegram-bot/src/telegram_bot/infrastructure/telegram/: __init__.py  bot_factory.py
services/telegram-bot/src/telegram_bot/infrastructure/telegram/handlers/: alert_commands.py  help.py  placeholder.py  preferences.py  start.py  watchlist_commands.py
services/telegram-bot/tests/: test_preference_service.py  test_start_handler.py  test_symbol.py  test_watchlist_service.py
services/yfinance-quotes-producer/: Dockerfile  README.md  pyproject.toml
services/yfinance-quotes-producer/src/yfinance_quotes_producer/: config.py  main.py  metrics.py  normalizer.py  producer.py  schema.py  yf_client.py
spark-application/: README.md
(+308 files in other folders)
