[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finnhub-news-producer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "aiokafka>=0.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finnhub_news_producer"]
