[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finnhub-trades-producer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "aiokafka>=0.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "prometheus-client>=0.20",
    "structlog>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/finnhub_trades_producer"]
