[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faststream[kafka]>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
    "langchain-core>=0.3",
    "langchain>=0.3",
    "langgraph>=0.2",
    "pyiceberg[pyarrow]>=0.7",
    "pyarrow>=16.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
gemini = ["langchain-google-genai>=2.0"]
openai = ["langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.2"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
