[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rule-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "faststream[kafka]>=0.5",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
    "pyiceberg[pyarrow]>=0.7",
    "pyarrow>=16.0",
    "asyncpg>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rule_engine"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
