[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[webhooks]>=20.7",
    "pydantic-settings>=2.2",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_bot"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
